--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 
     <title>WikiQuiz</title>
 
+    <!-- Load font. -->
+    <link rel="stylesheet" href="https://use.typekit.net/lcl1plu.css">
+
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="./build/bundle.css" />
 
