Integrate all remaining services and generate quiz.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
     <!-- Load font. -->
     <link rel="stylesheet" href="https://use.typekit.net/lcl1plu.css">
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="./build/bundle.css" />
