Stricter choice checks, swiper pagination.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lcl1plu.css">
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="./build/bundle.css" />
