--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>WikiQuiz</title>
+  <title>WikiQuiz</title>
 
-    <!-- Load font. -->
-    <link rel="stylesheet" href="https://use.typekit.net/lcl1plu.css">
-    <!-- swiper -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <!-- Load font. -->
+  <link rel="stylesheet" href="https://use.typekit.net/lcl1plu.css">
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="stylesheet" href="./build/bundle.css" />
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
 
-    <script defer src="./build/bundle.js"></script>
+  <link rel="stylesheet" href="./build/bundle.css" />
+
+  <script defer src="./build/bundle.js"></script>
 </head>
 
 <body></body>
